# mneme

./: .env.example  .gitignore  README.md  RESULTS-gpt5.5-subset10.md  RESULTS-okf-noapi.md  RESULTS-subset10.md  pyproject.toml
.omc/: project-memory.json
.omc/sessions/: c8eb0c53-7003-44f6-bf14-c1da9d58af4e.json
.omc/state/: agent-replay-fe2a5bee-b3b7-4fa4-81a2-906b7ce4688f.jsonl  idle-notif-cooldown.json
data/: okf_split.json  subset10.txt
docs/: RESULTS-by-range.md  architecture-notes.md  codex-5worker-README.md  codex-consolidator-prompt.md  codex-learning-prompt.md  codex-worker-prompt.md  learning-ledger.md  learning-roadmap.md  pipelines.md  subset10_g55_results.jsonl  subset10_results.jsonl
learning/: used_tasks.txt
learning/round-1/: shard-1.txt  shard-2.txt  shard-3.txt  shard-4.txt  shard-5.txt
learning/round-10/: shard-1.txt  shard-2.txt  shard-3.txt  shard-4.txt  shard-5.txt
mcp/: memory_server.py  specialist_server.py  verify_server.py
memory_store/: memory_stats.jsonl
memory_store/okf/: log.md  (+1 more)
prompts/: kickoff.md  system.md
runner/: run.py
scripts/: audit_leak.py  run_subset10.sh  run_subset10_g55.sh  test_runner_batch.sh  validate_plumbing.py
tests/: test_ab_eval.py  test_agent_openai.py  test_agent_options.py  test_build_taxonomy.py  test_consolidate.py  test_cybergym_io.py  test_hexview.py  test_learning_shard.py  test_memory_scope.py  test_noapi_cli.py  test_okf_hygiene.py  test_okf_loader.py  test_run_smoke.py  test_runner_glue.py  test_smoke.py  test_specialist_core.py  test_task_card.py  test_verify_core.py  test_vocab.py
(+3797 files in other folders)
